# Electronics_Lab_Tools

./: CMakeLists.txt  README.md  UI.py  fgfinal (1).ino  funtion_generator_UI.py  project_circuit-1 (1) (1).asc
adc_test/: CMakeLists.txt  dma_capture.c
i2c_test/: CMakeLists.txt  i2c_test.c
